force-app/main/default/objects/Property_Detail__c/Property_Detail__c.object-meta.xml
<CustomObject>
    <description>Stores property and collateral details for secured loan applications. Captures valuation data from Valuation Officer site visits and legal title verification from Legal Officer review.</description>
    <label>Property Detail</label>
    <nameField>
        <displayFormat>PROP-{YYYY}-{000000}</displayFormat>
        <label>Property Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>