force-app/main/default/objects/Property_Detail__c/fields/Collateral_Category__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Category__c</fullName>
    <label>Collateral Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Self-Occupied</fullName><default>false</default><label>Self-Occupied</label></value>
            <value><fullName>Rented</fullName><default>false</default><label>Rented</label></value>
            <value><fullName>Vacant</fullName><default>false</default><label>Vacant</label></value>
            <value><fullName>Under Construction</fullName><default>false</default><label>Under Construction</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>