force-app/main/default/objects/Property_Detail__c/fields/Construction_Status__c.field-meta.xml
<CustomField>
    <fullName>Construction_Status__c</fullName>
    <label>Construction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Under Construction</fullName><default>false</default><label>Under Construction</label></value>
            <value><fullName>Plot Only</fullName><default>false</default><label>Plot Only</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>