force-app/main/default/objects/Property_Detail__c/fields/Forced_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Forced_Sale_Value__c</fullName>
    <label>Forced Sale Value (FSV)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Estimated value of property under distress/forced sale conditions. Typically 60-80% of market value. Used for risk assessment.</description>
</CustomField>