force-app/main/default/objects/Property_Detail__c/fields/LTV_Ratio__c.field-meta.xml
<CustomField>
    <fullName>LTV_Ratio__c</fullName>
    <label>LTV Ratio (%)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Loan-to-Value ratio. Calculated as (Loan Amount / Market Value) * 100. Auto-calculated via Apex when Market Value is entered.</description>
</CustomField>