force-app/main/default/objects/Property_Detail__c/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Freehold</fullName><default>false</default><label>Freehold</label></value>
            <value><fullName>Leasehold</fullName><default>false</default><label>Leasehold</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>