force-app/main/default/objects/Property_Detail__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <label>Property Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>