force-app/main/default/objects/Property_Detail__c/fields/Property_Area_SqFt__c.field-meta.xml
<CustomField>
    <fullName>Property_Area_SqFt__c</fullName>
    <label>Property Area (Sq Ft)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>