force-app/main/default/objects/Property_Detail__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Residential</fullName><default>false</default><label>Residential</label></value>
            <value><fullName>Commercial</fullName><default>false</default><label>Commercial</label></value>
            <value><fullName>Industrial</fullName><default>false</default><label>Industrial</label></value>
            <value><fullName>Agricultural</fullName><default>false</default><label>Agricultural</label></value>
            <value><fullName>Vehicle</fullName><default>false</default><label>Vehicle</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>