force-app/main/default/objects/Property_Detail__c/fields/Title_Status__c.field-meta.xml
<CustomField>
    <fullName>Title_Status__c</fullName>
    <label>Title Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending Verification</fullName><default>true</default><label>Pending Verification</label></value>
            <value><fullName>Clear</fullName><default>false</default><label>Clear</label></value>
            <value><fullName>Disputed</fullName><default>false</default><label>Disputed</label></value>
            <value><fullName>Encumbered</fullName><default>false</default><label>Encumbered</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>