force-app/main/default/objects/Property_Detail__c/fields/Title_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Title_Verified_By__c</fullName>
    <label>Title Verified By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Title Verifications</relationshipLabel>
    <relationshipName>Title_Verifications</relationshipName>
</CustomField>