force-app/main/default/objects/Property_Detail__c/fields/Valuation_Officer__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Officer__c</fullName>
    <label>Valuation Officer</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Property Valuations</relationshipLabel>
    <relationshipName>Property_Valuations</relationshipName>
</CustomField>