force-app/main/default/objects/Property_Detail__c/fields/Valuation_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Remarks__c</fullName>
    <label>Valuation Remarks</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>