force-app/main/default/objects/Property_Detail__c/fields/Valuation_Report_Ref__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Report_Ref__c</fullName>
    <label>Valuation Report Reference</label>
    <type>Text</type>
    <length>255</length>
</CustomField>