force-app/main/default/objects/Property_Detail__c/fields/Valuation_Status__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Status__c</fullName>
    <label>Valuation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Site Visit Scheduled</fullName><default>false</default><label>Site Visit Scheduled</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>