force-app/main/default/objects/Property_Detail__c/fields/Year_Of_Construction__c.field-meta.xml
<CustomField>
    <fullName>Year_Of_Construction__c</fullName>
    <label>Year of Construction</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>